# compress

./: .editorconfig  .gitattributes  .gitignore  .loc-budget.toml  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  lychee.toml  mkdocs.yml  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo-fuzz.yml  cargo-mutants.yml  cargo-semver-checks.yml  ci.yml  coverage.yml  docs-pdf.yml  docs.yml  drift.yml  gpu.yml  lychee.yml  multi-os.yml  zizmor.yml
crates/vpm-authority/: Cargo.toml
crates/vpm-authority/src/: lib.rs
crates/vpm-core/: Cargo.toml
crates/vpm-core/src/: lib.rs  policy.rs  types.rs
crates/vpm-dsl/: Cargo.toml
crates/vpm-dsl/src/: lib.rs
crates/vpm-egraph/: Cargo.toml
crates/vpm-egraph/src/: lib.rs
crates/vpm-ledger/: Cargo.toml
crates/vpm-ledger/src/: lib.rs
crates/vpm-py/: Cargo.toml
crates/vpm-py/src/: lib.rs
crates/vpm-verify/: Cargo.toml
crates/vpm-verify/src/: frontier.rs  lib.rs  support.rs
docs/: README.md  glossary.md  references.md
docs/architecture/: 00-abstract.md  01-contract-ledger-invariants.md  02-typed-mechanisms-evidence.md  03-neural-substrate.md  04-natural-language.md  05-compiler-posterior.md  06-verification-authority.md  07-compression-memory.md  08-training-system.md  09-evaluation-failure.md  A-inference-procedure.md  B-sanity-conditions.md  README.md
docs/implementation/: README.md  egglog-migration.md
examples/vpm0/: run.py  train.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dsl_parse.rs  verify_e_value.rs
python/vpm/: __init__.py  __main__.py  _cli.py  _eval_cli.py  _llm_baseline_cli.py  _native.pyi  _reports.py  diagnostics.py
python/vpm/audit/: __init__.py  failure_modes.py  objective_audit.py  red_team.py  release_audit.py
python/vpm/compiler/: __init__.py  posterior.py  score_head.py
python/vpm/evaluation/: __init__.py  ablations.py  active.py  baselines.py  compression.py  compute_accounting.py  dialogue.py  external_baseline_artifacts.py  external_components.py  failure_modes.py  hard_domains.py  llm_baseline.py  llm_baseline_c1.py  llm_baseline_c1_predictions.py  llm_baseline_hard.py  neural_baselines.py  objective_audit.py  open_domain.py  openai_release_baseline.py  phase_transition.py  red_team.py  release_audit.py  saturation.py
python/vpm/infer/: __init__.py  halt.py  staging.py  support_guard.py  test_select.py
python/vpm/language/: __init__.py  ambiguity.py
python/vpm/memory/: __init__.py  active.py  active_set.py  admit.py  archival.py  frontier.py  library.py
python/vpm/providers/: __init__.py  openai_baseline.py
python/vpm/retrieval/: __init__.py  calibration.py
python/vpm/substrate/: __init__.py  encoder.py  losses.py  projection.py  prototype.py  slots.py  ssm.py
python/vpm/tasks/: __init__.py  hard_domains.py  spec.py
python/vpm/tasks/c0/: __init__.py
python/vpm/tasks/c1/: __init__.py  synthesis.py  theorem.py
python/vpm/tasks/c2/: __init__.py  causal.py  planning.py
python/vpm/tasks/c3/: __init__.py  rollback.py  tools.py
python/vpm/tasks/c4/: __init__.py
python/vpm/tasks/c5/: __init__.py
python/vpm/training/: __init__.py  active_query.py  budget.py  coordinator.py  gflow.py  probes.py  prototype.py  prototype_metrics.py  splits.py  teacher.py  weight_balancer.py
python/vpm/training/losses/: __init__.py  components.py  primitives.py  registry.py
python/vpm/verifiers/: __init__.py  dependence.py  entailment.py
scripts/: check-loc.py
tests/: test_examples.py  test_mvp.py  test_smoke.py  test_trainable_prototype.py
tests/integration/failure_modes/: test_criterion1.py
tests/integration/sanity/: test_baseline_audit.py  test_c1_controls.py  test_c2_controls.py  test_c3_rollback_ledger.py  test_c3_tool_sandbox.py  test_c4_uncertainty.py  test_compiler_posterior.py  test_compute_accounting.py  test_dependence_shift.py  test_entailment_attacks.py  test_external_components.py  test_hard_domains.py  test_llm_baseline_harness.py  test_llm_baseline_openai.py  test_m6_red_team.py  test_memory_controls.py  test_mvp_kernel.py  test_objective_audit.py  test_open_domain_ambiguity.py  test_phase_transition.py  test_recall_shift.py  test_release_audit.py  test_substrate_controls.py  test_training_controls.py  test_training_losses.py  test_training_scheduler.py
