[workspace]
resolver = "2"
members = [
  "crates/vpm-core",
  "crates/vpm-ledger",
  "crates/vpm-dsl",
  "crates/vpm-egraph",
  "crates/vpm-authority",
  "crates/vpm-verify",
  "crates/vpm-py",
]
# `fuzz/` is a standalone cargo-fuzz workspace; libfuzzer linker flags
# would bleed into normal builds if it were a member.
exclude = ["fuzz"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0"
repository = "https://github.com/SamMausberg/compress"
authors = ["Sam Mausberg <samuelmausberg@gmail.com>"]
readme = "README.md"

[workspace.dependencies]
# Internal crates
vpm-core = { path = "crates/vpm-core", version = "0.0.0" }
vpm-ledger = { path = "crates/vpm-ledger", version = "0.0.0" }
vpm-dsl = { path = "crates/vpm-dsl", version = "0.0.0" }
vpm-egraph = { path = "crates/vpm-egraph", version = "0.0.0" }
vpm-authority = { path = "crates/vpm-authority", version = "0.0.0" }
vpm-verify = { path = "crates/vpm-verify", version = "0.0.0" }

# External
egg = "0.11"
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py314"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# bincode 2.x was flagged unmaintained (RUSTSEC-2025-0141) and 3.0 ships a
# `compile_error!` poison pill. We use postcard — same niche (serde-
# compatible binary format), actively maintained, no_std-friendly.
postcard = { version = "1", default-features = false, features = ["alloc"] }
parking_lot = "0.12"
dashmap = "6.1"
smallvec = { version = "1", features = ["serde", "union"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1"
bitvec = "1"
roaring = "0.11"
petgraph = "0.8"

# Dev
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"
insta = { version = "1", features = ["yaml", "json"] }

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pragmatic relaxations for a research codebase.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
too_many_arguments = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
# AI-bloat tripwires. Thresholds in clippy.toml; complement to the
# per-file/per-folder budgets in .loc-budget.toml.
too_many_lines = "warn"
cognitive_complexity = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = "line-tables-only"
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
