[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "vpm"
version = "0.0.0"
description = "Reference implementation of VPM-5.3: Verifier-Native Compressive Predictive Mechanisms."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Sam Mausberg", email = "samuelmausberg@gmail.com" }]
keywords = [
  "non-transformer",
  "compression",
  "structured-memory",
  "verifier-native",
  "continual-learning",
  "mechanism-formation",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  "torch>=2.11",
  "numpy>=2.1",
  "scipy>=1.14",
  "einops>=0.8",
  "pydantic>=2.10",
  "rich>=14.0",
  "typer>=0.15",
  "networkx>=3.5",
]

[project.optional-dependencies]
ssm = ["mamba-ssm>=2.2"]
viz = ["matplotlib>=3.9", "plotly>=5.24"]
retrieve = ["faiss-cpu>=1.9", "sentence-transformers>=3.3"]
all = [
  "vpm[ssm]",
  "vpm[viz]",
  "vpm[retrieve]",
]

[project.scripts]
vpm = "vpm.__main__:app"

[project.urls]
Homepage = "https://github.com/SamMausberg/compress"
Documentation = "https://sammausberg.github.io/compress"
Repository = "https://github.com/SamMausberg/compress"
Changelog = "https://github.com/SamMausberg/compress/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Maturin: build the PyO3 extension and ship the mixed Python+Rust package.
# ---------------------------------------------------------------------------
[tool.maturin]
manifest-path = "crates/vpm-py/Cargo.toml"
module-name = "vpm._native"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

# ---------------------------------------------------------------------------
# uv (resolver + lockfile + dev tooling).
# ---------------------------------------------------------------------------
[tool.uv]
package = true

[dependency-groups]
dev = [
  "ruff>=0.13",
  "pyright>=1.1.405",
  "pytest>=8.4",
  "pytest-cov>=7.0",
  "pytest-benchmark>=5.2",
  "hypothesis>=6.140",
  "pre-commit>=4.3",
  "maturin>=1.8",
  "typos>=1.36",
  "pip-audit>=2.9",
]
docs = [
  "mkdocs-material>=9.6",
  "mkdocstrings[python]>=0.30",
]

# ---------------------------------------------------------------------------
# Ruff (lint + format).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["python"]
extend-exclude = ["site", "target", ".venv"]

[tool.ruff.lint]
# The architecture spec uses Unicode en/em dashes intentionally
# (e.g. "eqs. 22–23"); don't flag them as confusable with hyphen-minus.
allowed-confusables = [
  "–", "—",
  "α", "β", "γ", "δ", "ε", "ζ", "η", "θ", "ι", "κ", "λ", "μ",
  "ν", "ξ", "ο", "π", "ρ", "σ", "τ", "υ", "φ", "χ", "ψ", "ω",
  "Γ", "Δ", "Θ", "Λ", "Ξ", "Π", "Σ", "Υ", "Φ", "Ψ", "Ω",
]
select = [
  "E", "F", "W",          # pycodestyle / pyflakes
  "I",                     # isort
  "N",                     # pep8-naming
  "UP",                    # pyupgrade
  "B",                     # flake8-bugbear
  "C4",                    # comprehensions
  "SIM",                   # simplify
  "PT",                    # pytest style
  "RET",                   # return
  "RUF",                   # ruff-specific
  "TID",                   # tidy imports
  "ARG",                   # unused arguments
  "PL",                    # pylint
  "TRY",                   # tryceratops
  "PERF",                  # perflint
  "FURB",                  # refurb
]
ignore = [
  "E501",                  # line length (formatter handles it)
  "PLR0913",               # too many arguments — research code routinely needs them
  "PLR0911",               # too many returns — same
  "PLR2004",               # magic numbers — same
  "TRY003",                # long exception messages
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR", "ARG", "S101"]
"examples/**" = ["PLR", "ARG"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pyright (type checking).
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["python"]
exclude = ["**/__pycache__", "**/.pytest_cache", "site", "target"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
useLibraryCodeForTypes = true

# ---------------------------------------------------------------------------
# Pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.3"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
markers = [
  "slow: marks tests as slow",
  "gpu: requires a CUDA device",
  "integration: end-to-end tests",
]
filterwarnings = [
  "default",
  "error::DeprecationWarning:vpm.*",
  "error::UserWarning:vpm.*",
]

# ---------------------------------------------------------------------------
# Coverage.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["python/vpm"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Typos.
# ---------------------------------------------------------------------------
[tool.typos.default]
extend-words = { "VPM" = "VPM", "VNS" = "VNS" }

[tool.typos.files]
extend-exclude = [
  "*.pdf",
  "Cargo.lock",
  "uv.lock",
  "site/**",
  "target/**",
]
