[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "vpm"
version = "0.0.0"
description = "Reference implementation of VPM-5.3: Verifier-Native Compressive Predictive Mechanisms."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [{ name = "Sam Mausberg", email = "samuelmausberg@gmail.com" }]
keywords = [
  "non-transformer",
  "compression",
  "structured-memory",
  "verifier-native",
  "continual-learning",
  "mechanism-formation",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  # TODO(security): CVE-2026-24747 — torch unpickler RCE. Once a patched
  # 2.11.z is published, raise this floor to that version (e.g. >=2.11.2).
  "torch>=2.11",
  "numpy>=2.4",
  "scipy>=1.17",
  "einops>=0.8",
  "pydantic>=2.13",
  "rich>=15.0",
  "typer>=0.25",
  "networkx>=3.6",
]

[project.optional-dependencies]
ssm = ["mamba-ssm>=2.3"]
viz = ["matplotlib>=3.10", "plotly>=6.7"]
retrieve = ["faiss-cpu>=1.13", "sentence-transformers>=5.4"]
all = [
  "vpm[ssm]",
  "vpm[viz]",
  "vpm[retrieve]",
]

[project.scripts]
vpm = "vpm.__main__:app"

[project.urls]
Homepage = "https://github.com/SamMausberg/compress"
Documentation = "https://sammausberg.github.io/compress"
Repository = "https://github.com/SamMausberg/compress"
Changelog = "https://github.com/SamMausberg/compress/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Maturin: build the PyO3 extension and ship the mixed Python+Rust package.
# ---------------------------------------------------------------------------
[tool.maturin]
manifest-path = "crates/vpm-py/Cargo.toml"
module-name = "vpm._native"
python-source = "python"
features = ["pyo3/extension-module"]
strip = true

# ---------------------------------------------------------------------------
# uv (resolver + lockfile + dev tooling).
# ---------------------------------------------------------------------------
[tool.uv]
package = true

[dependency-groups]
dev = [
  "ruff>=0.15",
  "pyright>=1.1.405",
  "pytest>=9.0",
  "pytest-cov>=7.0",
  "pytest-benchmark>=5.2",
  "hypothesis>=6.140",
  "pre-commit>=4.6",
  "maturin>=1.13",
  "typos>=1.46",
  "pip-audit>=2.9",
  "deptry>=0.20",
]
docs = [
  "mkdocs-material>=9.7",
  "mkdocstrings[python]>=1.0",
]

# ---------------------------------------------------------------------------
# Ruff (lint + format).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["python"]
extend-exclude = ["site", "target", ".venv"]

[tool.ruff.lint]
# The architecture spec uses Unicode en/em dashes intentionally
# (e.g. "eqs. 22–23"); don't flag them as confusable with hyphen-minus.
allowed-confusables = [
  "–", "—",
  "α", "β", "γ", "δ", "ε", "ζ", "η", "θ", "ι", "κ", "λ", "μ",
  "ν", "ξ", "ο", "π", "ρ", "σ", "τ", "υ", "φ", "χ", "ψ", "ω",
  "Γ", "Δ", "Θ", "Λ", "Ξ", "Π", "Σ", "Υ", "Φ", "Ψ", "Ω",
]
select = [
  "E", "F", "W",          # pycodestyle / pyflakes
  "I",                     # isort
  "N",                     # pep8-naming
  "UP",                    # pyupgrade
  "B",                     # flake8-bugbear
  "C4",                    # comprehensions
  "SIM",                   # simplify
  "PT",                    # pytest style
  "RET",                   # return
  "RUF",                   # ruff-specific
  "TID",                   # tidy imports
  "ARG",                   # unused arguments
  "PL",                    # pylint
  "TRY",                   # tryceratops
  "PERF",                  # perflint
  "FURB",                  # refurb
  "S",                     # flake8-bandit (security; verifier-native code earns the noise)
]
ignore = [
  "E501",                  # line length (formatter handles it)
  "PLR0913",               # too many arguments — research code routinely needs them
  "PLR0911",               # too many returns — same
  "PLR2004",               # magic numbers — same
  "TRY003",                # long exception messages
  "S101",                  # `assert` is fine in non-test code that isn't safety-critical
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR", "ARG", "S101", "S105", "S106", "S311"]
"examples/**" = ["PLR", "ARG", "S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pyright (type checking).
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["python"]
exclude = ["**/__pycache__", "**/.pytest_cache", "site", "target"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
useLibraryCodeForTypes = true

# ---------------------------------------------------------------------------
# Pytest.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
]
markers = [
  "slow: marks tests as slow",
  "gpu: requires a CUDA device",
  "integration: end-to-end tests",
  "sanity: behavior-level invariants from Appendix B (executable sanity conditions)",
  "failure_modes: regression tests for Criterion 1 (§9) failure clauses",
]
filterwarnings = [
  "default",
  "error::DeprecationWarning:vpm.*",
  "error::UserWarning:vpm.*",
]

# ---------------------------------------------------------------------------
# Coverage.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["python/vpm"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Typos.
# ---------------------------------------------------------------------------
[tool.typos.default]
# `breal`, `bsem`, `bctx` are LaTeX subscripts for `b_real`, `b_sem`,
# `b_ctx` from §8 (eq. 148). They look like typos but they are math.
extend-words = { "VPM" = "VPM", "VNS" = "VNS", "breal" = "breal", "bsem" = "bsem", "bctx" = "bctx" }

[tool.typos.files]
extend-exclude = [
  "*.pdf",
  "Cargo.lock",
  "uv.lock",
  "site/**",
  "target/**",
]

# ---------------------------------------------------------------------------
# Deptry: flag missing, unused, transitive, and misplaced Python deps.
# ---------------------------------------------------------------------------
[tool.deptry]
extend_exclude = ["site", "target", ".venv", "tests", "examples", "scripts"]
known_first_party = ["vpm"]
# DEP002 (unused dep) is suppressed while `python/vpm/` is mostly
# placeholder packages; flip it back on once the M0 modules import the
# core runtime deps. Until then, pip-audit + cargo-deny carry the
# unused-package signal indirectly.
ignore = ["DEP002"]
# Map distribution-name → import-name for packages whose import path
# isn't trivially derivable from the dist name. Silences deptry's
# "Assuming the corresponding module name…" warnings.
package_module_name_map = {"mamba-ssm" = "mamba_ssm", "faiss-cpu" = "faiss", "sentence-transformers" = "sentence_transformers", "mkdocs-material" = "material", "mkdocstrings" = "mkdocstrings"}

[tool.deptry.per_rule_ignores]
# `vpm._native` is the maturin-built extension; deptry can't see it.
DEP001 = ["vpm._native"]
