[package]
name = "vpm-authority"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "Authority lattice, declassification, and vector-risk gates for VPM-5.3."

[lints]
workspace = true

[dependencies]
vpm-core = { workspace = true }
vpm-ledger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
