[package]
name = "vpm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "Shared types for the VPM-5.3 architecture: contracts, atoms, modes, taints, vector risk."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
bitvec = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
