[package]
name = "vpm-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
description = "Append-only ledger Λ, content-addressed trace DAG, and provenance graph for VPM-5.3."

[lints]
workspace = true

[dependencies]
vpm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }
